hw12_13_14_15_calendar/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: calendar
  template:
    metadata:
      labels:
        app: calendar
    spec:
      containers:
        - name: calendar
          image: your-docker-image
          ports:
            - containerPort: 8080
