hw12_13_14_15_calendar/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calendar-service
spec:
  selector:
    app: calendar
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
